# Matematica-avanzadas-maestr-a

./: .gitignore  README.md  Series_Taylor_Actividad.ipynb  Series_finitas_actividad_2.ipynb  informe_discrepancias_actividad2.md  pyproject.toml  verificacion_p35_p41.ipynb
proyecto 1/: Informe_Validacion_Proyecto1.md  Problema2_Validacion.ipynb  simulation-3.html
