[project]
name = "codigos"
version = "0.1.0"
readme = "README.md"
description = "Ejercicios y visualizaciones de matemáticas avanzadas"
requires-python = "==3.10.9"
dependencies = [
    "httpx>=0.28.1",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "numpy",
    "plotly",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "sympy",
]

[tool.uv]
managed = true
